assets/CSS/main.css
* {
  --gray1: rgb(200, 200, 200);
  --gray2: rgb(160, 160, 160);
  --gray3: rgb(120, 120, 120);
  --gray4: rgb(80, 80, 80);
  --gray5: rgb(40, 40, 40);
}

/*
  =======================
  General layout
  =======================
*/

body {
  background-color: #f6f3f2;
}

.d-flex {
  display: flex;
}

/*
  =======================
  Typography
  =======================
*/

h1,
h2,
h3,
h4 {
  font-family: "Nunito", sans-serif;
}

p {
  font-family: "Noto Serif", serif;
}

a {
  text-decoration: none;
  color: black;
}

ul {
  list-style-type: none;
  padding: 0;
}

/*
  =======================
  Buttons
  =======================
*/

.button {
  border-radius: 0.5em;
  background-color: cornflowerblue;
  border: 0;
  padding: 0.6em 0.8em;
  font-family: "Nunito", sans-serif;
}

/*
  =======================
  Navbar
  =======================
*/

.header {
  padding: 0 2em;
  background-color: #d33a2c;
  color: white;
  font-family: "Nunito", sans-serif;
  justify-content: space-between;
  align-items: center;
  font-size: 1.3em;
}

.logo {
  width: 200px;
  padding-top: 20px;
}

.nav-links {
  display: grid;
  grid-auto-flow: column;
}

.nav-links li {
  padding: 0.5em 0.8em;
}

@media (max-width: 1424px) {
  .nav-links :nth-child(6) {
    display: none;
  }
}

.nav-links a {
  color: white;
}

.nav-links li:hover {
  background-color: rgba(00, 00, 00, 0.3);
  border: none;
  border-radius: 10px;
}

.more-nav {
  width: 90px;
  background-color: rgba(00, 00, 00, 0.2);
  border-radius: 10px;
  border: none;
  margin-left: 8px;
}

.more-nav a {
  align-items: center;
}

.cat-img {
  width: 30px;
  height: auto;
}

.search-bar {
  width: 350px;
}

.search-form {
  box-shadow: 5px 4px 3px rgba(00, 00, 00, 0.2);
  border: none;
  border-radius: 15px;
}

.search-box {
  width: 100%;
  background: white url(../images/search-outline.svg) 15px center/25px no-repeat;
  padding: 14px 50px;
  border: none;
  border-radius: 15px;
}

.search-box::placeholder {
  color: #5c5858;
  font-weight: 600;
}

/*
  =======================
  Top Section
  =======================
*/

.top-section {
  background-color: #bc3428;
  color: white;
  display: grid;
  grid-template-columns: repeat(2, 50%);
}

.top-section-header {
  grid-column: 1 / -1;
  justify-content: center;
  position: relative;
}

.main-title {
  margin-top: 25px;
  text-align: center;
  justify-content: center;
  align-content: center;
  align-items: center;
  flex-direction: column;
}

.main-title > * {
  background-color: white;
  padding: 0.15em 0.35em 0.35em;
  font-size: 2.4em;
  color: black;
  margin-bottom: -2px;
}

.main-title span {
  width: 150px;
  font-family: "Nunito", sans-serif;
  font-weight: 700;
}

.change-theme {
  position: absolute;
  right: 50px;
  top: 50px;
  justify-content: center;
  align-items: center;
  font-family: "Nunito", sans-serif;
  font-weight: 800;
}

.square-button {
  background-color: white;
  width: 45px;
  height: 45px;
  border-radius: 10px;
  margin-right: 20px;
  transform: rotate(-10deg);
}

.change-theme span {
  padding: 10px;
  border: 1px solid white;
  border-radius: 10px;
}

/* Top Section Articles */

.top-section-article {
  padding: 0 60px;
  width: auto;
  height: 581px;
  position: relative;
}

.top-section-article:hover {
  cursor: pointer;
}

.author {
  padding-top: 60px;
  align-items: center;
  color: white;
}

.top-image-container {
  transform: rotate(-10deg);
  border: 2px solid white;
  margin-right: 25px;
  width: 75px;
  height: 75px;
}

.author-image {
  width: 100%;
}

.top-section-article .author-name {
  color: white;
}

.author-name strong {
  margin-right: 0.4em;
}

.article-title-div {
  font-size: 1.8em;
  display: inline-block;
  padding: 1em 0;
}

.article-title {
  display: inline;
}

.chatbox {
  width: 20px;
  position: relative;
  top: 4px;
}

.article-title-div span {
  font-size: 16px;
}

.hashtag-links {
  display: flex;
  font-size: 0.9em;
}

.hashtag-links li {
  margin-right: 2.7em;
}

.hashtag-links span {
  color: rgba(00, 00, 00, 0.5);
  padding-right: 0.4em;
}

.hashtag-links sup {
  margin-left: 0.4em;
  font-size: 0.7em;
  font-family: "Nunito", sans-serif;
}

.arrow-button {
  color: white;
  font-size: 2.6em;
  position: absolute;
  bottom: 40px;
}

/*
  =======================
  Aside Section
  =======================
*/

.aside-section {
  background-color: #143252;
  color: white;
  font-size: 1.1em;
  line-height: 35px;
}

.aside-info-wrapper {
  flex-direction: column;
  padding: 50px 100px 50px 150px;
  flex: 1;
  align-items: baseline;
}

.aside-description {
  margin: 0;
}

.aside-list {
  list-style: circle;
  padding: 0.4em 0.3em 1em 2.7em;
  font-size: 1.1em;
}

.aside-btn {
  color: white;
  background-color: yellowgreen;
  font-size: 1.3em;
  font-weight: 600;
}

.aside-link-img {
  flex: 1;
  width: 250px;
  height: auto;
  padding-right: 300px;
  margin-top: -100px;
}

/*
  =======================
  Latest Posts
  =======================
*/

.latest-posts {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 600px 800px 600px 600px 240px;
  position: relative;
  grid-column-gap: 20px;
  grid-row-gap: 30px;
  padding: 0 90px 0 50px;
}

.section-titles-h4 {
  position: absolute;
  transform: rotate(90deg);
  text-transform: uppercase;
  top: 30px;
  left: -50px;
}

/* Articles */

.g-wrapper {
  display: grid;
  height: 100%;
  grid-template-rows: auto auto auto 1fr 125px;
  justify-items: start;
}

.g-wrapper > * {
  margin: 0;
  padding-left: 20px;
}

.published-date {
  padding-top: 50px;
  padding-bottom: 10px;
  text-transform: uppercase;
  font-size: 0.8em;
  color: grey;
}

.mid-article-title {
  text-decoration: underline;
  padding-bottom: 30px;
}

.author-name {
  font-family: "Nunito", sans-serif;
  font-weight: 600;
  color: rgb(122, 116, 116);
  padding-bottom: 30px;
}

.author-name a {
  color: rgb(122, 116, 116);
  text-decoration: underline;
}

.article-description {
  line-height: 2em;
}
/* ... */

